# bbsynth

./: .gitignore  CMakeLists.txt  README.md
.junie/: guidelines.md
plugin/: CMakeLists.txt
plugin/include/BBSynth/: AnalogADSR.h  Constants.h  Downsampler.h  MinBlepGenerator.h  OTAFilter.h  OTAFilterDelayedFeedback.h  OTAFilterTPTNewtonRaphson.h  Oscillator.h  PluginEditor.h  PluginProcessor.h  SpectrumAnalyzerComponent.h  TanhADAA.h  ToneFilter.h  Utils.h  WaveGenerator.h
plugin/modules/: JuceImports.cppm
plugin/source/: AnalogADSR.cpp  Downsampler.cpp  MinBlepGenerator.cpp  OTAFilter.cpp  OTAFilterDelayedFeedback.cpp  OTAFilterTPTNewtonRaphson.cpp  Oscillator.cpp  PluginEditor.cpp  PluginProcessor.cpp  PluginProcessor.h  SpectrumAnalyzerComponent.cpp  TanhADAA.cpp  ToneFilter.cpp  Utils.h  WaveGenerator.cpp
plugin/source/dsp/: AnalogADSR.cpp  AnalogADSR.h  Downsampler.cpp  Downsampler.h  TanhADAA.cpp  TanhADAA.h
plugin/source/filter/: OTAFilterDelayedFeedback.cpp  OTAFilterDelayedFeedback.h  OTAFilterTPTNewtonRaphson.cpp  OTAFilterTPTNewtonRaphson.h  ToneFilter.cpp  ToneFilter.h
plugin/source/oscillator/: MinBlepGenerator.cpp  MinBlepGenerator.h  Oscillator.cpp  Oscillator.h  WaveGenerator.cpp  WaveGenerator.h
plugin/source/ui/: LFOSection.cpp  LFOSection.h  PluginEditor.cpp  PluginEditor.h  SpectrumAnalyzerComponent.cpp  SpectrumAnalyzerComponent.h
plugin/source/ui/section/: Env1Section.cpp  Env1Section.h  Env2Section.cpp  Env2Section.h  LFOSection.cpp  LFOSection.h  VCASection.cpp  VCASection.h  VCFDriveScalingSection.cpp  VCFDriveScalingSection.h  VCFSection.cpp  VCFSection.h  VCO1Section.cpp  VCO1Section.h  VCO2Section.cpp  VCO2Section.h  VCOModSection.cpp  VCOModSection.h
test/: CMakeLists.txt
test/source/: AudioProcessorTest.cpp  MinBlepGeneratorTest.cpp  WaveGeneratorTest.cpp
